syntax = "proto3";
package fx.gravity.v1;

import "gogoproto/gogo.proto";
import "gravity/v1/tx.proto";

option go_package = "github.com/functionx/fx-core/x/gravity/types";

message Params {
  option (gogoproto.stringer) = false;

  string gravity_id = 1;
  string contract_source_hash = 2;
  string bridge_eth_address = 4;
  uint64 bridge_chain_id = 5;
  uint64 signed_valsets_window = 6;
  uint64 signed_batches_window = 7;
  uint64 signed_claims_window = 8;
  uint64 target_batch_timeout = 10;
  uint64 average_block_time = 11;
  uint64 average_eth_block_time = 12;
  bytes slash_fraction_valset = 13 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  bytes slash_fraction_batch = 14 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  bytes slash_fraction_claim = 15 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  bytes slash_fraction_conflicting_claim = 16 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  uint64 unbond_slashing_valsets_window = 17;
  uint64 ibc_transfer_timeout_height = 18;
  bytes valset_update_power_change_percent = 19 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}
